--- a/htmlPages/homePage/homepage.html
+++ b/htmlPages/homePage/homepage.html
@@ -28,15 +28,23 @@
         <div class="carousel-item active">
           <img src="../../assets/carousalBackground1.jpg" />
           <div class="carousel-caption">
-            <h3>Dhairya to add some heading</h3>
-            <p>Dhairya to add some content</p>
+            <h3>Breaking The Monolith</h3>
+            <p>Loosley Coupled Tightly Integrated Microservice Ecosystem? Yes its possible</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../../assets/carousalBackground2.jpg" />
+          <div class="carousel-caption">
+            <h3>Responsive and Reactive UI Designs</h3>
+            <p>Powerful yet simple Frontend ? Yes it is possible</p>
+          </div>
         </div>
         <div class="carousel-item">
           <img src="../../assets/carousalBackground3.jpg" />
+          <div class="carousel-caption">
+            <h3>Running your Buisness from Cloud</h3>
+            <p>Including infrastructure and state of art Devops? Yes its possible</p>
+          </div>
         </div>
       </div>
       <a class="carousel-control-prev" href="#demo" data-slide="prev">
