--- a/htmlPages/homePage/homepage.html
+++ b/htmlPages/homePage/homepage.html
@@ -28,23 +28,30 @@
         <div class="carousel-item active">
           <img src="../../assets/carousalBackground1.jpg" />
           <div class="carousel-caption">
-            <h3>Dhairya to add some heading</h3>
-            <p>Dhairya to add some content</p>
+            <h1>Breaking The Monolith</h1>
+            <p>
+              Loosley Coupled Tightly Integrated Microservice Ecosystem? Yes its
+              possible
+            </p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="../../assets/carousalBackground2.jpg" />
+          <div class="carousel-caption">
+            <h1>Responsive and Reactive UI Designs</h1>
+            <p>Powerful yet simple Frontend ? Yes it is possible</p>
+          </div>
         </div>
         <div class="carousel-item">
           <img src="../../assets/carousalBackground3.jpg" />
+          <div class="carousel-caption">
+            <h1>Running your Buisness from Cloud</h1>
+            <p>
+              Including infrastructure and state of art Devops? Yes its possible
+            </p>
+          </div>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </a>
-      <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </a>
     </div>
     <!-- Option box goes here
     <div class="options">
